client.worksheet: Fix bug where page size was not updated correctly after loading, and truncation of background image

--- a/website/src/com/project/website/canvas/client/resources/main.css
+++ b/website/src/com/project/website/canvas/client/resources/main.css
@@ -171,6 +171,7 @@
 
 .worksheetPanel {
 	height: 600px; /* This will later be changed dynamically */
+	min-height: 100%;
 	width: 100%;
 	position: absolute;
 }
